fix(icon-packs): fix broken classnames in emoji warpper; fix emoji vertical align; add class EmojiIconData

--- a/src/icon-packs/icon.less
+++ b/src/icon-packs/icon.less
@@ -4,6 +4,9 @@
 
 span.isc-icon {
   vertical-align: middle;
+  &.isc-char-icon {
+    vertical-align: baseline;
+  }
   & > img,
   & > svg {
     height: 1em;
